# modnamedhana

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: index.html  install.html  remove.html  select.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/renpy/: HanaRouteCh1.rpy  HanaScript.rpy  HavenHomeTour.rpy  placeholder.txt
src-tauri/renpy/new-files/: HanaRouteCh1.rpy
src-tauri/renpy/patch-differences/: HavenHomeTour.rpy
src-tauri/src/: commands.rs  game.rs  main.rs  utils.rs
src/assets/css/: index.css  install-shared.css  install.css  shared.css
src/assets/js/: install.js  select.js
